fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,11 @@ a {
   background-size: initial;
 }
 
+@media (prefers-color-scheme: dark) {
+  .my-bg-image{
+    background-image: none;
+  }
+}
 
 .mainbg{
   background-color:  #2b2932
@@ -43,6 +48,8 @@ a {
   background-position: 50% 50%;
   background-size: contain;
 }
+
+
 
 .gradient {
   background-image: linear-gradient(-225deg, #2b2932 0%, #eaebed 100%)
